--- a/STA610_Case_Study_2_Team_4.Rmd
+++ b/STA610_Case_Study_2_Team_4.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = FALSE, cache=TRUE)
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 if (!require(pacman)) install.packages("pacman")
-pacman::p_load(tidyverse, lme4, gridExtra, grid, ggplot2, lattice, redres, stringr, influence.ME, knitr, GGally, corrplot, brms, rstan, cowplot, directlabels, tidybayes)
+pacman::p_load(tidyverse, lme4, gridExtra, grid, ggplot2, lattice, redres, stringr, influence.ME, knitr, GGally, corrplot, brms, rstan, cowplot, directlabels, tidybayes, parallel)
 # devtools::install_github("goodekat/redres")
 rstan_options(auto_write=TRUE)
 options(mc.cores=parallel::detectCores())
@@ -286,14 +286,15 @@ $$
 formula <- 'total_voted_voter | trials(total_registered_voter) ~
             1 + Age*Party + Sex*Party + Race + Ethnic + (1 | County)'
 default_model <- brm(data = df, family = binomial,
-                     formula = formula,
-                     prior = c(prior(normal(0, 10), class = Intercept),
-                                prior(normal(0, 10), class = b)),
-                     iter=50,
+                     prior = c(
+                       set_prior('normal(0, 10)', class = 'Intercept'),
+                       set_prior('normal(0, 10)', class = 'b'),
+                       set_prior('student_t(3, 0, 1)', class='sd')
+                     ),
+                     iter=10,
                      cores=detectCores(),
                      seed=42)
 ```
-
 
 #### Model Diagnostics
 
