--- a/STA610_Case_Study_2_Team_4.Rmd
+++ b/STA610_Case_Study_2_Team_4.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = FALSE, cache=TRUE)
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 if (!require(pacman)) install.packages("pacman")
-pacman::p_load(tidyverse, lme4, gridExtra, grid, ggplot2, lattice, redres, stringr, influence.ME, knitr, GGally, corrplot, brms, rstan, cowplot, directlabels, tidybayes, parallel)
+pacman::p_load(tidyverse, lme4, gridExtra, grid, ggplot2, lattice, redres, stringr, influence.ME, knitr, GGally, corrplot, brms, rstan, cowplot, directlabels, tidybayes, parallel, ROCR)
 # devtools::install_github("goodekat/redres")
 rstan_options(auto_write=TRUE)
 options(mc.cores=parallel::detectCores())
